# battery-tray

./: .gitignore  ADD_GUIDANCE.md  README.md  pyproject.toml  requirements.txt
autostart/: battery-tray.desktop
scripts/: run_battery_tray.sh
src/: battery-tray.py
