[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-tray"
version = "0.1.0"
description = "Tray utility to manage battery charge thresholds"
authors = [
    { name="Your Name", email="your@email.com" },
]
dependencies = [

]
requires-python = ">=3.8"
